Add comments to the tools.py file

--- a/Python_Notebook/Add_to_db.ipynb
+++ b/Python_Notebook/Add_to_db.ipynb
@@ -95,30 +95,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Hyacinthe Cartuyvels (1849-1897)', 'https://fr.wikipedia.org/wiki?curid=6797291')\n"
+     ]
+    }
+   ],
    "source": [
-    "f = open('../Database/dataset.json')\n",
-    "dataset = json.load(f)\n",
-    "f.close()\n",
+    "# f = open('../Database/dataset.json')\n",
+    "# dataset = json.load(f)\n",
+    "# f.close()\n",
     "# dataset={int(key):[value[0],int(value[1]),value[2],value[3],value[4]] for key,value in dataset.items()}\n",
     "\n",
     "conn = sqlite3.connect('../Database/Database.db')\n",
     "cursor = conn.cursor()\n",
-    "cursor.execute(\"Drop Table Articles\")\n",
-    "create_db=\"CREATE TABLE Articles(ID_ROW NUMERIC,ID_ARTICLE NUMERIC,Title TEXT,URL TEXT,Location TEXT,Line_index NUMERIC);\"\n",
-    "cursor.execute(create_db)\n",
-    "index=\"CREATE INDEX index_id ON Articles (ID_ROW);\"\n",
-    "cursor.execute(index)\n",
+    "# # cursor.execute(\"Drop Table Articles\")\n",
+    "# # create_db=\"CREATE TABLE Articles(ID_ROW NUMERIC,ID_ARTICLE NUMERIC,Title TEXT,URL TEXT,Location TEXT,Line_index NUMERIC);\"\n",
+    "# # cursor.execute(create_db)\n",
+    "# index=\"CREATE INDEX index_id_article2 ON Articles (ID_ARTICLE);\"\n",
+    "# cursor.execute(index)\n",
+    "# index=\"CREATE INDEX index_id ON Articles (ID_ROW);\"\n",
+    "# cursor.execute(index)\n",
     "\n",
-    "sq=\"'\" #single quote\n",
-    "for key,value in dataset.items():\n",
-    "    tmp=value[1].replace(\"'\",\" \")\n",
-    "    request='Insert into Articles Values (%s,%s,%s,%s,%s,%s)'%(key,value[0],sq+tmp+sq,sq+value[2]+sq,sq+value[3]+sq,value[4])\n",
-    "#     print(request)\n",
-    "#     break\n",
-    "    cursor.execute(request)\n",
+    "\n",
+    "# sq=\"'\" #single quote\n",
+    "# for key,value in dataset.items():\n",
+    "#     tmp=value[1].replace(\"'\",\" \")\n",
+    "#     request='Insert into Articles Values (%s,%s,%s,%s,%s,%s)'%(key,value[0],sq+tmp+sq,sq+value[2]+sq,sq+value[3]+sq,value[4])\n",
+    "# #     print(request)\n",
+    "# #     break\n",
+    "#     cursor.execute(request)\n",
     "conn.commit()\n",
     "conn.close()"
    ]
