--- a/Python_Notebook/Wor2Vec.ipynb
+++ b/Python_Notebook/Wor2Vec.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import gensim\n",
     "from sklearn.decomposition import PCA\n",
+    "from sklearn.manifold import TSNE\n",
     "from gensim.models import KeyedVectors\n",
     "import os\n",
     "import json\n",
@@ -18,7 +19,8 @@
     "import pandas as pd\n",
     "import sys\n",
     "import time\n",
-    "import sqlite3"
+    "import sqlite3\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -126,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,24 +138,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2014580,)"
+       "array([0, 1, 3])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cursor.execute(\"Select count(ID) from Vectors\")\n",
-    "cursor.fetchone()"
+    "a=np.array([0,1,2,3])\n",
+    "# mask = np.isnan(a)\n",
+    "# ma = np.ma.masked_array(a, mask=mask)\n",
+    "b=[True,True,False,True]\n",
+    "a[b]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cursor.execute(\"Select * from Vectors limit 10\")\n",
+    "cursor.execute(\"SELECT * FROM Vectors v WHERE v.ID IN (SELECT ID FROM Vectors ORDER BY RANDOM() LIMIT 1000)\")\n",
+    "tmp=cursor.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mpl_toolkits.mplot3d import Axes3D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pca=PCA(3)\n",
+    "tmp=pca.fit_transform(np.array(list(tmp))[:,1:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib qt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<mpl_toolkits.mplot3d.art3d.Path3DCollection at 0x7f07962b7550>"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fig = plt.figure()\n",
+    "ax = Axes3D(fig)\n",
+    "ax.scatter(tmp[:,0],tmp[:,1],tmp[:,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import random_projection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -240,6 +322,13 @@
     "cursor.execute(\"Select count(ID) from Vectors\")\n",
     "cursor.fetchone()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
